# axiom-os

./: .gitignore  ARCHITECTURE_RCLN_2_0.md  BENCHMARK_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  DATA_VERIFICATION.md  D_DRIVE_DATA_STATUS.md  EXPERIMENT_REPORT.md  FULL_VERIFICATION.md  GPU_EXPERIMENT_REPORT.md  INSTALL_INSTRUCTIONS.md  INSTRUCTIONS.txt  INTELLECTUAL_PROPERTY.md  JHTDB_1024_FNO3D_SUMMARY.md  JHTDB_REAL_DATA_REPORT.md  KAN_RCLN_GUIDE.md  LICENSE  MUJOCO_GAOKAO_GUIDE.md  PDEBENCH_INTEGRATION.md  PRODUCTION_REPORT.md  PROPRIETARY_COMPONENTS.md  QUICKSTART.md  RCLN_2_0_MIGRATION.md  RCLN_3_0_ARCHITECTURE.md  RCLN_V2_GENERIC_SUMMARY.md  RCLN_V3_HARDCORE_SUMMARY.md  README.md  README_INSTALL_PYTORCH.md  REAL_WORLD_CHALLENGE.md  RUN_IN_EDITOR.py  RUN_NOW.bat  SECURITY.md  SETUP_GPU_GUIDE.md  SYSTEM_STATUS.md  THE_EDGE_OF_ROBUSTNESS.md  USE_CASES.md  __init__.py  axiom_go1_full_demo.py  axiom_isaac_production.py  axiom_isaac_working.py  (+91 more)
agent/: __init__.py  gemini_agent.py
api/: __init__.py  server.py
arena/: __init__.py  multi_agent.py
axiom_core_proprietary/: README.md  __init__.py  discovery.py  hippocampus.py  partition.py  pyproject.toml  rcln.py  wind_hard_core.py
axiom_core_proprietary/bundle_field/: __init__.py  axes.py  connection.py
axiom_os/: __init__.py  dashboard.py  demo_acrobot.py  gui_app.py  main.py  main_battery.py  main_turbulence_3d.py  main_turbulence_ageostrophic.py  mission_control.py  run_axiom_upi.py  run_gui.bat  run_turbulence_full.py  validate_all.py
benchmarks/: MUJOCO_TEST_REPORT.md  enhanced_discovery.py  gym_adapter.py  quick_demo.py  quick_demo_data.json  results.json  run_200k_benchmark.py  run_b01_fluid.py  run_b01_fluid_fixed.py  run_climate_chaos.py  run_data_efficiency.py  run_data_starvation.py  run_data_starvation_dns.py  run_data_starvation_quick.py  run_demo.py  run_extreme_starvation.py  run_ood_reynolds.py  run_strict_test.py  srbench_complete.py  srbench_complete_results.json  srbench_easy_test.json  srbench_results.json  srbench_results_easy_recovery_vs_noise.json  srbench_results_enhanced.json  srbench_results_final.json  srbench_results_medium_recovery_vs_noise.json  srbench_results_success.json  srbench_results_v2.json  srbench_results_v3.json  srbench_runner.py  test_gym_adapter.py  test_gym_mujoco.py
causal/: __init__.py  scm.py
cli/: main.py
config/: axiom_os_llm.env
core/: __init__.py  adaptive_hard_core.py  alpha_scheduler.py  causal_constraints.py  einstein.py  features.py  features_2d.py  graphrag_hippocampus.py  hard_core_manager.py  imagination.py  knowledge.py  online_identification.py  optimizer.py  partition.py  partition_integrator.py  perturbation.py  task.py  upi.py  wind_hard_core.py
data/: ELIA_GRID_README.md  RAR.mrt  elia_grid.csv  hippocampus_memory.json
data_cache/: nino34.long.anom.data  nino34_psl_real.data
datasets/: DATA_MERGING_CLUSTERS.md  __init__.py  atmospheric_turbulence.py  chae_wide_binaries.py  download_pdebench.py  elia_grid.py  jhtdb_turbulence.py  merging_clusters.py  merging_clusters_29_collection.json  rc100.py  (+5 more)
(+552 files in other folders)
